# adalm

./: .gitignore  README.md  setup.sh
ShUtil/script/: rootlogon.C
ShUtil/src/: histmanager.C  shStyle.cc  util.cc
adalm_aout/source/: CMakeLists.txt  ad_aout.cpp
adalm_daq/: README.md  default_config.json  setup.sh
adalm_daq/config/: config.json
adalm_daq/source/: CMakeLists.txt  daq.cpp  daq_test.cpp
adalm_dout/source/: CMakeLists.txt  ad_dout.cpp
adalm_out/source/: CMakeLists.txt  ad_dout.cpp  ad_out.cpp  bitstream.txt  ctrl_sironeko_sample.txt  getusbport.py  send_bitstream.cpp  set_voltage.cpp  shutter_ctrl.cpp
ana/result/20250228/ampCalib/: DrawGainCurve.cxx  rootlogon.C
ana/src/: drawResult.cpp  eventSelect.cpp  fitSpectrum.cpp  makeTree.cpp
ana/src/inc/: inc.hpp
analyzer/: setup.sh
analyzer/ADALM2Root/: ADALM2Root.cpp  CMakeLists.txt
analyzer/ADALM2Root/include/: ADALMConfig.hh
analyzer/ADALM2Root/src/: ADALMConfig.cc
analyzer/root_macro/: DrawSpectrum.C  DrawWaveform.C  DrawWaveformMulti.C  chain.cc
analyzer/root_macro/ShUtil/inc/: shStyle.h  shinclude.h
analyzer/root_macro/ShUtil/src/: physutil.cc
cfg/: config.json
config/: config.json
config/per0000/: config.json
daq/src/: CMakeLists.txt  daq.cpp
monitor/: tempMonitor.py
py_osci/: README.md  create_gif.py  osci_2ch.py
rootmacros/: DrawGainCurve.cxx  chain.cxx  drawResult.cxx  eventSelect.cxx  fitSpectrum.cxx  makeTree.cxx
source/daq/: CMakeLists.txt
